k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-backend-service
  namespace: prod-team
spec:
  selector:
    app: weather-backend
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
