k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-frontend-service
  namespace: prod-team
spec:
  selector:
    app: weather-frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
